<resources>
    <string name="app_name">seminar1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myName">이 유 정</string>
    <string name="myGithubId">You-jeong136</string>
    <string name="scroooolllll">개발 초보 \n scroll view\n scroll view\n  scroll view\n scroll view\n scroll view\n
   scroll view\n scroll view\n  scroll view\n scroll view\n scroll view\n scroll view\n scroll view\n  scroll view\n scroll view\n scroll view\n
    scroll view\n scroll view\n  scroll view\n scroll view\n scroll view\n scroll view\n scroll view\n  scroll view\n scroll view\n scroll view\n
    </string>
    <string name="githubIdText">깃허브 아이디</string>
    <string name="githubIdHint">아이디를 입력해주세요</string>
    <string name="githubPwText">비밀번호</string>
    <string name="githubPwHint">비밀번호를 입력해주세요</string>

    <string name="noIdPwText">아이디/비밀번호가 없으신가요?</string>

    <string name="regiText">회원가입</string>
    <string name="sex">성별</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="birth">생일</string>
    <string name="birthHint">1900&#8211;01&#8211;01 형식으로 입력해주세요</string>
    <string name="phone">전화번호</string>
    <string name="phoneHint">전화번호를 입혁해주세요</string>

    <string name="followingHeader">팔로잉 화면</string>
    <string name="name">이름</string>
    <string name="nameHint">이름을 입력해주세요</string>
    <string name="more">more</string>
    <string name="change">change</string>
    <string name="login">login</string>
    <string name="logout">logout</string>
    <string name="signup">sign up</string>

</resources>